--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.86.2",
